<resources>
    <string name="app_name">DBug</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_list">Browse projects</string>
    <string name="title_activity_request">Request</string>

    <!-- Login/register activity -->
    <string name="input_password">Password</string>
    <string name="input_password_repeat">Confirm password</string>
    <string name="input_email">Email</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="register_link">Not a member? Click here to register.</string>
    <string name="login_link">Already a member? Click here to login.</string>
    <string name="error_empty">Field can not be empty.</string>
    <string name="error_login">Email or password are not correct.</string>
    <string name="error_email_format">Introduce a valid email address.</string>
    <string name="error_email_taken">Account already exists for your email.</string>
    <string name="error_password_format">Password must be 8 characters or longer and contain letters (both uppercase and lowercase) and numbers.</string>
    <string name="error_password2_different">Both password fields must be the same.</string>

    <!-- Dialogs -->
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="dialog_exit_title">Warning</string>
    <string name="dialog_exit_message">Are you sure you want to close the app?</string>
    <string name="dialog_logout_title">Warning</string>
    <string name="dialog_logout_message">Are you sure you want to logout?</string>

    <!-- List activity -->
    <string name="dialog_edit">Rename</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit_title">Enter the new name</string>
    <string name="dialog_edit_save">Save</string>
    <string name="dialog_edit_discard">Cancel</string>
    <string name="dialog_create_project_title">Enter the project name</string>
    <string name="dialog_create_request_title">Enter the request name</string>
    <string name="dialog_create_save">Create</string>
    <string name="dialog_create_discard">Cancel</string>
    <string name="image_send_description">Send the request.</string>

    <!-- Request activity -->
    <string name="tab_request">Request</string>
    <string name="tab_response">Response</string>

    <!-- Request fragment -->
    <string name="request_url">URL:</string>
    <string name="request_method">METHOD:</string>
    <string name="request_body">BODY:</string>
    <string name="request_headers">HEADERS:</string>
    <string name="request_headers_key_hint">Key</string>
    <string name="request_headers_value_hint">Value</string>
    <string-array name="request_method_list">
        <item>GET</item>
        <item>POST</item>
        <item>PUT</item>
        <item>DELETE</item>
    </string-array>

    <!-- Response fragment -->
    <string name="response_code">Response code:</string>
    <string name="response_time">Response time:</string>
    <string name="response_headers">HEADERS: </string>
    <string name="response_body">BODY: </string>

    <!-- Errors -->
    <string name="error_empty_field">The field can not be empty.</string>
    <string name="error_internet_connection">Can not access the server. Check your internet connection.</string>
</resources>
